[project]
name = "language_model_server"
version = "0.1.0"
description = "providing the server for the language processing model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.120.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "yarl>=1.20.1", # for settings's URL
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[project.scripts]
# 左边是uv run xxx的xxx
mcp-server = "language_model_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["language_model_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
